--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "react-native-reanimated": "^1.2.0",
     "react-navigation": "^4.0.6",
     "react-navigation-drawer": "^2.2.2",
-    "react-navigation-stack": "^1.8.0"
+    "react-navigation-stack": "^1.8.0",
+    "react-redux": "7.0.0",
+    "redux": "^4.0.4",
+    "redux-form": "^8.2.6"
   },
   "devDependencies": {
     "@babel/core": "^7.6.0",
